--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
 <body>
   <div class="main-content">
   {{>header}}
- 
+  <p>This site was created by Adelabu Kamaldeen. It uses data from mapbox.com and weatherstack.com</p>
   <img src="/img/adelabu.jpg" class="portrait">
   
   </div>
