--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,11 @@
 
 
 <Header>
-  <h1>{{title}}</h1>
-  <a href="/">Weather</a>
+  <div class="head">
+    <h1>{{title}} </h1>
+    <img src="https://res.cloudinary.com/adelabuadeleke/image/upload/v1627342260/icons8-partly-cloudy-day-80_dmy6on.png" />
+  </div>
+  <a href="/">Weather </a>
   <a href="/about">About</a>
   <a href="/help">Help</a>
 </Header>
