--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
-  <link rel="icon" href="/img/weather.png">
+  <link rel="icon" href="/assets/image/weather.png">
 
   <link rel="stylesheet" href="/css/style.css">
 
@@ -12,8 +12,10 @@
 <body>
   <div class="main-content">
   {{>header}}
-  <p>This site was created by Adelabu Kamaldeen. It uses data from mapbox.com and weatherstack.com</p>
-  <img src="/img/adelabu.jpg" class="portrait">
+  <p>This site was created by Adelabu Kamaldeen. It uses data from <a href="https://www.mapbox.com">mapbox.com</a>  and <a href="https://www.weatherstack.com/">weatherstack.com</a> </p>
+  <p>you can use it to get real-time weather forecast</p>
+  
+  
   
   </div>
  {{>footer}}
