--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,9 +11,9 @@
 <body>
   <div class="main-content">
     {{>header}}
-    <p>Use this site to get your weather</p>
+    <p> <i> Get your weather forecast!</i></p>
     <form action="">
-      <input type="text" placeholder="location">
+      <input type="text" placeholder="Enter your location">
       <button>search</button>
     </form>
 
